[gd_scene load_steps=7 format=3 uid="uid://ghvi5pwcpegb"]

[ext_resource type="Script" uid="uid://ddvst2jitvti4" path="res://Scripts/MainMenu.gd" id="1_menu"]
[ext_resource type="FontFile" uid="uid://1mo72lc7h3wm" path="res://Assets/NotoSansThai_Regular.woff2" id="2_font"]
[ext_resource type="FontFile" uid="uid://xnarrpgm2y4y" path="res://Assets/NotoSansThai_Bold.woff2" id="3_font_bold"]
[ext_resource type="Texture2D" uid="uid://b1v356n2hw3xs" path="res://Assets/vita_forest_bg.png" id="4_bg"]
[ext_resource type="Texture2D" uid="uid://bhfwo3tdjgufn" path="res://Assets/npc_storyteller.png" id="5_elder"]
[ext_resource type="Texture2D" uid="uid://denaqcmutx6ms" path="res://Assets/npc_healer.png" id="6_healer"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bg")
expand_mode = 1
stretch_mode = 6

[node name="ListParticles" type="CPUParticles2D" parent="."]
position = Vector2(640, 720)
amount = 30
lifetime = 8.0
preprocess = 5.0
speed_scale = 0.6
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, -15)
initial_velocity_min = 30.0
initial_velocity_max = 60.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.478431, 1, 0.615686, 0.5)

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="LeftCharacter" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -650.0
offset_right = 450.0
grow_vertical = 0
texture = ExtResource("5_elder")
expand_mode = 1
stretch_mode = 5

[node name="RightCharacter" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -650.0
offset_right = -50.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_healer")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_constants/separation = 5
alignment = 1

[node name="GameTitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.843137, 0, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_font_bold")
theme_override_font_sizes/font_size = 100
text = "VITA-FOREST"
horizontal_alignment = 1

[node name="EnglishSubtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Health Intelligence Education Game"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "‡∏ú‡∏π‡πâ‡∏û‡∏¥‡∏ó‡∏±‡∏Å‡∏©‡πå‡∏õ‡πà‡∏≤‡πÅ‡∏´‡πà‡∏á‡∏ä‡∏µ‡∏ß‡∏¥‡∏ï"
horizontal_alignment = 1

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GamificationInfo" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StreakLabel" type="Label" parent="MainContainer/GamificationInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_fonts/font = ExtResource("3_font_bold")
theme_override_font_sizes/font_size = 20
text = "üî• 3 Days"

[node name="LPLabel" type="Label" parent="MainContainer/GamificationInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("3_font_bold")
theme_override_font_sizes/font_size = 20
text = "üéì 150 LP"

[node name="StartBtn" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 65)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "‡πÄ‡∏£‡∏¥‡πà‡∏°‡πÄ‡∏Å‡∏°‡πÉ‡∏´‡∏°‡πà"

[node name="ContinueBtn" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 65)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
disabled = true
text = "‡πÄ‡∏•‡πà‡∏ô‡∏ï‡πà‡∏≠"

[node name="OptionsBtn" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "‡∏ï‡∏±‡πâ‡∏á‡∏Ñ‡πà‡∏≤"

[node name="CreditsBtn" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "‡πÄ‡∏Å‡∏µ‡πà‡∏¢‡∏ß‡∏Å‡∏±‡∏ö"

[node name="ExitBtn" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "‡∏≠‡∏≠‡∏Å‡∏à‡∏≤‡∏Å‡πÄ‡∏Å‡∏°"

[connection signal="pressed" from="MainContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MainContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="MainContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="MainContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MainContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
